Cache node modules in GitHub Actions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "background.js",
   "scripts": {
-    "lint": "eslint --ext .js ./"
+    "lint": "eslint --ext .js ."
   },
   "author": "",
   "license": "ISC",
